@@ -9,6 +9,12 @@
 
 <!-- ###LIST_GROUPS### begin -->
 <div>
+	<form action="###ACTION.URL###" method="post">
+	<input type="hidden" name="tx_community[action]" value="search" />
+Quicksearch: <input type="text" name="tx_community[quicksearch]" value="" /> <input type="text" name="tx_community[submit]" value="search" />
+	</form>
+</div>
+<div>
 	###PAGEBROWSER###
 	<div id="tx-community-grouplist">
 		<!-- ###LOOP:GROUPS### begin -->
